# dir2txt

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
