[package]
name = "dir2txt"
version = "0.2.3"
repository = "https://github.com/masroof-maindak/dir2txt"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "Convert a directory to text."

[dependencies]
anyhow = "1.0.102"
camino = "1.2.3"
clap = { version = "4.6.1", features = ["derive"] }

[[bin]]
name = "d2t"
path = "src/main.rs"
